# ra-fixture-generator

./: CHANGELOG.md  Dockerfile  README.md  RELEASE.md  init.config.yml  mypy.ini  pyproject.toml
.reuse/: dep5
ra_fixture_generator/: __init__.py  __main__.py  apply.py  cli.py  fixture_generator.py  generate_org_tree.py  generator.py  reader.py  util.py
ra_fixture_generator/generators/: association.py  base.py  classes.py  employee.py  employee_address.py  engagement.py  it_user.py  kle.py  leave.py  manager.py  org_address.py  org_tree.py  org_unit.py  role.py
tests/: test_cli.py  test_ra_fixture_generator.py
